# lumatone-rs

./: Cargo.toml  README.md  flake.nix  rustfmt.toml
cli/: Cargo.toml
cli/src/: main.rs
cli/src/cmd/: debug.rs  mod.rs  send_preset.rs
core/: Cargo.toml
core/src/: lib.rs
dioxus-gui/src/components/: mod.rs
dioxus-gui/src/components/wheel/: mod.rs
dioxus-gui/src/drawing/: color.rs
gui/: .prettierrc  Cargo.toml  index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs
gui/src/: App.svelte  app.css  app.html  main.rs  main.ts
gui/src-tauri/: tauri.conf.json
gui/src/components/: color_wheel.rs  mod.rs  scratchpad.rs
gui/src/components/keyboard/: board.rs  coords.rs  key.rs  layout.rs  map.rs  mod.rs  octave.rs
gui/src/components/tabs/: mod.rs  style.css
gui/src/components/wheel/: constellation.rs  mod.rs  wedge.rs  wheel.rs
gui/src/drawing/: color.rs  mod.rs
gui/src/harmony/: mod.rs  view_model.rs
gui/src/hooks/: mod.rs  usesizeobserver.rs  useuniqueid.rs
gui/src/lib/: BoardGeometry.ts  Palette.ts  RXB.ts  coordinates.ts  drawing.ts
gui/src/models/: geometry.ts  keymap.ts
gui/src/routes/: +layout.svelte  +page.svelte  mod.rs  readme.md
gui/src/routes/edit/: +page.svelte
gui/src/routes/keymaps/: +page.svelte  +page.ts
gui/src/routes/play/: +page.svelte
gui/src/routes/setlists/: +page.svelte
gui/src/ui/: RailNav.svelte
gui/src/ui/wheel/: Wedge.svelte  Wheel.svelte
keymap/: Cargo.toml
keymap/src/: error.rs  lib.rs  ltn.rs  table_defaults.rs  tables.rs
keymap/src/harmony/: mod.rs
lumatone-core/: Cargo.toml
lumatone-core/src/: lib.rs
lumatone-core/src/color/: mod.rs  palette.rs  utils.rs
lumatone-core/src/geometry/: coordinates.rs  layout.rs  mod.rs
lumatone-core/src/harmony/: mod.rs
lumatone-core/src/keymap/: error.rs  ltn.rs  mod.rs  tables.rs
lumatone-core/src/midi/: constants.rs  device.rs  driver.rs  error.rs  responses.rs  sysex.rs
midi/: Cargo.toml
midi/src/: app.rs  commands.rs  constants.rs  detect.rs  device.rs  driver.rs  error.rs  lib.rs  responses.rs  sysex.rs
midi/src/capabilities/: commands.rs  connect.rs  detect.rs  io.rs  mod.rs  notify.rs  timeout.rs
midi/src/driver/: actions.rs  effects.rs  mod.rs  state.rs  submission.rs
midi/src/shell/: connect.rs  detect.rs  io.rs  mod.rs
midi/src/shell/caps/: connect.rs  detect.rs  mod.rs
src/: main.rs
src/keymap/: error.rs  ltn.rs  mod.rs  table_defaults.rs  tables.rs
src/midi/: commands.rs  constants.rs  detect.rs  device.rs  driver.rs  error.rs  mod.rs  responses.rs  sysex.rs
