[package]
name = "lumatone-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
callback-future = "0.1"
tokio = { version = "1.20.1", features = ["full"]}
tokio-scoped = "0.2.0"
midir = { version = "0.8.0" }
num-traits = "0.2"
num-derive = "0.3"
log = "0.4.0"
env_logger = "0.8.4"
rust-ini = "0.18.0"
error-stack = "0.1.1"
bounded-integer = { version = "0.5.2", features = ["std", "macro"] }
rand = "0.8.5"
# UI deps... maybe move this to a separate crate?
# dioxus = { version = "0.2.4", features = ["desktop", "ayatana", "web", "liveview", "fermi", "router"] }