[package]
name = "lumatone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "0.4.0"
env_logger = "0.8.4"
tokio = { version = "1.20.1", features = ["full"]}

lumatone-midi = { path = "../midi" }
lumatone-keymap = { path = "../keymap" }