[package]
name = "lumatone-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = [
	# enable for iOS:
	#"staticlib", 
	# enable for Android:
	#"cdylib",

	"lib"
	]
name = "lumatone_core"

[features]
typegen = ["crux_core/typegen"]

[dependencies]
crux_core = { workspace = true }
crux_macros = { workspace = true }
serde = { workspace = true, features = ["derive"] }
lazy_static = { workspace = true }
#uniffi = { workspace = true }
wasm-bindgen = { workspace = true }

#[target.uniffi-bindgen.dependencies]
#uniffi = { version = "0.24.3", features = ["cli"] }

#[build-dependencies]
#uniffi = { version = "0.24.3", features = ["build"] }
