[package]
name = "lumachromatic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

lumatone-midi = { path = "../midi" }
lumatone-keymap = { path = "../keymap" }

palette = "0.6.1"


[dependencies.dioxus]
  git = "https://github.com/DioxusLabs/dioxus"
  rev = "bea16f151f3eb519ca8da3e3c20482d345067561"

[dependencies.dioxus-desktop]
  git = "https://github.com/DioxusLabs/dioxus"
  rev = "bea16f151f3eb519ca8da3e3c20482d345067561"
