[package]
name = "lumachromatic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

lumatone-midi = { path = "../midi" }
lumatone-keymap = { path = "../keymap" }

hexagon_tiles = "0.1.0"
palette = "0.6.1"
serde_json = "1"
tokio = { version = "1.21.2", features = ["full"] }
lazy_static = "1.4.0"

[dependencies.dioxus]
	version = "0.3.2"
	# path = "../../../src/dioxus/packages/dioxus"

[dependencies.dioxus-desktop]
  version = "0.3.0"
  # path = "../../../src/dioxus/packages/desktop"

# [dependencies.fermi]
#   git = "https://github.com/DioxusLabs/dioxus"
#   rev = "bea16f151f3eb519ca8da3e3c20482d345067561"
