[package]
name = "lumatone-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1.20.1", features = ["full"]}
midir = { version = "0.8.0" }
num-traits = "0.2"
num-derive = "0.3"
log = "0.4.0"
bounded-integer = { version = "0.5.2", features = ["std", "macro"] }
rand = "0.8.5"
rust-ini = "0.18.0"
hexagon_tiles = "0.2.0"
lazy_static = "1.4.0"
palette = "0.6.1"
tune = "0.33.0"
