[package]
name = "lumatone-midi"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
tokio = { version = "1.20.1", features = ["full"]}
midir = { version = "0.8.0" }
num-traits = "0.2"
num-derive = "0.3"
log = "0.4.0"
error-stack = "0.1.1"
bounded-integer = { version = "0.5.2", features = ["std", "macro"] }
rand = "0.8.5"