[package]
name = "lumatone-midi"
version = "0.1.0"
edition = "2021"

[features]
crux_shell = ["dep:midir"]


[dependencies]
futures = "0.3"
tokio = { version = "1.20.1", features = ["full"]}
midir = { version = "0.8.0" , optional = true }
num-traits = "0.2"
num-derive = "0.3"
log = "0.4.0"
bounded-integer = { version = "0.5.2", features = ["std", "macro", "serde1"] }
rand = "0.8.5"

crux_core = { workspace = true }
crux_macros = { workspace = true }
serde = { workspace = true, features = ["derive"] }
lazy_static = { workspace = true }
#uniffi = { workspace = true }
wasm-bindgen = { workspace = true }

uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
